feat: select element on screen to reduce context tokens and improve precision

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,13 @@
           rows="2"
           autofocus
         ></textarea>
-        <button id="submit-btn">Apply</button>
+        <div class="btn-row">
+          <button id="pick-btn">
+            Select region
+            <span class="btn-sublabel">better results</span>
+          </button>
+          <button id="apply-btn">Apply to page</button>
+        </div>
       </div>
 
       <div id="status" class="status hidden"></div>
